Duplicate entity versions are now disallowed per-ID
- Versioned entities (products and content) must now be unique per
  (id, version) tuple
- Removed some obsoleted version lookup code
- RefreshPoolsJob now defaults to 3 retries, as the new unique
  restriction could cause parallel refreshes containing the same
  net-new product or content to fail on the first attempt
- The product/content mapping operation of the RefreshWorker will
  now attempt to retry if a constraint violation occurs on the
  new entity versioning constraint and if the RefreshWorker has
  control over the current transaction
- ContentAccessManager.getCertificate no longer throws checked
  exceptions
- Several improvements to the Transactional wrapper